Avoid image truncation on mobile devices

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -117,6 +117,7 @@ body {
               width: auto;
               height: auto;
               max-height: 500px;
+              max-width: 100%;
           }
       }
 
